<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BodyDataScience</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="str_account">账          号:</string>
    <string name="str_account_input_hint">请输入账号！</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_isSavepass">记住用户名密码</string>
    <string name="login_progress">正在登陆，请稍后!</string>
    <string name="server_connect_error">服务器连接失败!</string>
    <string name="str_serverip">服务器地址: </string>
    <string name="str_serverport">服务器端口号: </string>
    <string name="str_serveripinput">请输入服务器地址! </string>
    <string name="str_serverportinput">请输入服务器端口号!</string>
    <string name="str_againlogin">账号在异处登陆，请重新登录</string>
    <string name="str_login_failed">登录系统失败</string>
       <string name="str_verify_failed">登录失败，用户名或密码错误</string>
    <string name="str_enterroom_failed">进入房间失败</string>
    <string name="str_lggin_failed">登录失败</string>
    <string name="str_exit">退出</string>
    <string name="str_accept">接受</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_resume">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_pause">挂断</string>
    <string name="str_send">发送</string>
    <string name="str_call">呼叫</string>
    <string name="str_back">返回</string>
    <string name="str_menu">菜单</string>
    <string name="str_switchcamera">切换摄像头</string>
    <string name="str_setting">设置</string>
    <string name="str_save">保存修改</string>
    <string name="no_onlines">当前没有在线用户</string>
    <string name="str_returncode_bussiness">呼叫对象正忙，请稍后再试</string>
    <string name="str_returncode_offline">呼叫用户不在线</string>
    <string name="str_user_offline">目标用户离线</string>
    <string name="str_returncode_requestcancel">用户取消呼叫</string>
    <string name="str_returncode_requestrefuse">用户拒绝被呼叫</string>
    <string name="str_returncode_disconnect">对方网络异常</string>
    <string name="str_returncode_timeout">呼叫超时</string>
    <string name="sessioning_reqite">请求与您通话！</string>
    <string name="str_calling">呼叫成功，正在等待用户响应</string>
    <string name="session_end">会话已经挂断</string>
    <string name="str_targetwrong">不能呼叫自己！</string>
    <string name="str_endsession">是否想要结束当前通话</string>
    <string name="end_session">结束通话</string>
    <string name="str_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="str_serverlink_close">与服务器断开连接，错误代码是</string>
    <string name="str_exitresume">是否想要退出整个应用程序</string>
    <string name="str_msgchatlist">文字聊天消息列表</string>
    <string name="str_notifitcation">iCloudSoft正在运行中</string>
    <string name="str_dialog_title_protip">AnyChatCallCenter提示</string>
    <string name="BACKING_RUNING">AnyChatCallCenter正在后台运行</string>
    <string name="company_msg">广州佰锐网络科技有限公司  版权所有</string>
    <string name="title_activity_self_set">SelfSetActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selfset">SelfsetActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    
    <!-- 台灯控制 -->
     <string name="title_activity_lightctrl">LightCtrl</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text">请开始说话b…</string>
    <string name="light_ctrl_instruction">说话:开灯,关灯,增大,减小,自动以调节灯光亮度</string>
    
    <!-- 坐姿检测 -->
   <string name="app_about">坐姿检测</string>
    
</resources>