<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud" >

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:drawablePadding="10dip"
                android:textColor="@color/txt_general_bg"
                android:text="@string/app_name"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="vertical" >
            
            <EditText
                android:id="@+id/edit_account"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/chat_edit"
                android:drawableLeft="@drawable/account_i"
                android:inputType="none" 
                 android:textColor="#555555"/>

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/chat_edit"
                 android:drawableLeft="@drawable/pwd_i"
                android:ems="10"
                android:textColor="#555555"
                android:inputType="none|textPassword" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.69"
                android:text="@string/str_login" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/str_register" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/check_issavepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="14sp"
                android:text="@string/str_isSavepass" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/str_setting" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="点击菜单键搜索蓝牙连接HC06开启坐姿检测系统" />

</RelativeLayout>